WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30948
Regression: crash enumerating properties of an object with getters or setters
https://bugs.webkit.org/show_bug.cgi?id=30948
Summary
Regression: crash enumerating properties of an object with getters or setters
Oliver Hunt
Reported
2009-10-30 00:54:19 PDT
Code inspection showed that enumeration caching doesn't account for the existence of getters or setters.
Attachments
Patch v1
(3.83 KB, patch)
2009-10-30 01:03 PDT
,
Oliver Hunt
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2009-10-30 01:03:35 PDT
Created
attachment 42180
[details]
Patch v1
Gavin Barraclough
Comment 2
2009-10-30 01:10:36 PDT
Comment on
attachment 42180
[details]
Patch v1 In the über-big if statement, I have a feeling we usually put the && on the continuing line. Also, might be nicer with one line per clause. Still, r+ with or without that change.
Oliver Hunt
Comment 3
2009-10-30 01:13:54 PDT
Committed
r50323
Oliver Hunt
Comment 4
2009-10-30 02:15:09 PDT
Committed
r50323
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug