Regression: crash enumerating properties of an object with getters or setters https://bugs.webkit.org/show_bug.cgi?id=30948

Reviewed by Gavin Barraclough

Add a guard to prevent us trying to cache property enumeration on
objects with getters or setters.

Canonical link: https://commits.webkit.org/41765@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50323 268f45cc-cd09-0410-ab3c-d52691b4dbfc